# BorderlessEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Assets/Scenes/: test.scene
Assets/Shader/: framebuffer.vs
BorderlessEngine/Runtime/: CMakeLists.txt
Opengl/BorderlessEngine/: GameObject.h
Opengl/BorderlessEngine/ECS/Component/: MeshFilterComponent.h
Opengl/BorderlessEngine/EditorGUI/: Inspector.cpp
Shader/: framebuffer.fs  unlit test.fs  unlit.fs  unlit.vs
Sources/: BorderlessEngine.cpp  BorderlessEngine.h  CMakeLists.txt
Sources/Editor/: AssetDatabase.h  AssetExplorer.h  BorderlessEditor.cpp  BorderlessEditor.h  CMakeLists.txt  DropManager.h  EditorLauncher.cpp  EditorLauncher.h  EditorProjectManager.h  EditorSceneManager.cpp  EditorSceneManager.h  FileUtility.cpp  FileUtility.h  ImguiManager.cpp  ImguiManager.h  RTTRRegistration.h  Selection.cpp  Selection.h  TestJson.h
Sources/Editor/CustomPropertyDrawer/: DefaultPropertyDrawer.h  ObjectPropertyDrawer.h  Vector3PropertyDrawer.h
Sources/Editor/EditorGUI/: CustomEditor.cpp  CustomEditor.h  EditorGUI.cpp  EditorGUI.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Selection.cpp  Selection.h  Window.cpp  Window.h
Sources/Editor/EditorWindow/: AssetBrowser.h  EditorWindow.cpp  EditorWindow.h  EditorWindowManager.cpp  EditorWindowManager.h  GameEditorWindow.cpp  GameEditorWindow.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  SceneEditorWindow.cpp  SceneEditorWindow.h
Sources/Editor/Importer/: AssetImportContext.h  ModelImporter.h  ScriptedImporter.h
Sources/Input/: InputSystem.cpp  InputSystem.h
Sources/Render/: RenderSystem.cpp  RenderSystem.h
Sources/Runtime/: BorderlessEngine.cpp  BorderlessEngine.h  CMakeLists.txt  Camera.h  Component.h  GameObject.cpp  GameObject.h  ISerializable.h  Material.h  MeshFilter.h  MeshRenderer.h  Object.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h
Sources/Runtime/Core/: GLFWManager.cpp  GLFWManager.h  GLFWUtility.cpp  GLFWUtility.h
Sources/Runtime/Input/: InputSystem.cpp  InputSystem.h
Sources/Runtime/Render/: Camera.cpp  Camera.h  Material.cpp  Material.h  MeshFilter.cpp  MeshFilter.h  MeshFilterComponent.cpp  MeshFilterComponent.h  MeshRenderer.cpp  MeshRenderer.h  RenderSystem.cpp  Shader.cpp  Shader.h
Sources/Runtime/Render/Model/: Mesh.cpp  Mesh.h  MeshFileHead.h  Model.cpp  Model.h  MyMesh.h  Texture.h  Vertex.h
lib/glad/: CMakeLists.txt
src/: test.cpp
