cmake_minimum_required(VERSION 3.5)
project(borderlessengine_editor)

set(PROJECT_LIBRARIES)
set(PROJECT_INCLUDE)
set(PROJECT_SOURCE)
set(PACKAGE_PATH ${CMAKE_SOURCE_DIR}/Packages)
set(PACKAGE_INCLUDE_PATH ${PACKAGE_PATH}/Include)
set(PACKAGE_SOURCE_PATH ${PACKAGE_PATH}/Source)
set(PACKAGE_LIBRARY_PATH ${PACKAGE_PATH}/Library)
set(BORDERLESSENGINE_RUNTIME_PATH ${CMAKE_SOURCE_DIR}/Sources/Runtime)

list(APPEND PROJECT_INCLUDE ${PROJECT_SOURCE_DIR})
list(APPEND PROJECT_INCLUDE ${BORDERLESSENGINE_RUNTIME_PATH})
list(APPEND PROJECT_INCLUDE ${PACKAGE_PATH})
list(APPEND PROJECT_INCLUDE ${PACKAGE_INCLUDE_PATH})

# GLFW
set(GLFW_LIB ${PACKAGE_LIBRARY_PATH}/GLFW/glfw3dll.lib)
list(APPEND PROJECT_LIBRARIES ${GLFW_LIB})

# glad
set(GLAD_INCLUDE ${PACKAGE_INCLUDE_PATH}/glad)
set(GLAD_SRC ${PACKAGE_SOURCE_PATH}/glad)
list(APPEND PROJECT_SOURCE ${GLAD_SRC}/glad.c)

# yaml
list(APPEND PROJECT_LIBRARIES ${PACKAGE_LIBRARY_PATH}/yaml-cpp/libyaml-cpp.dll)
list(APPEND PROJECT_INCLUDE ${PACKAGE_INCLUDE_PATH}/yaml-cpp)

# opengl 这个是必须的！imgui依赖opengl
list (APPEND PROJECT_LIBRARIES ${OPENGL_LIBRARIES})

# imgui
set(IMGUI_PATH ${PACKAGE_PATH}/imgui)
# add_subdirectory(${PACKAGE_PATH}/imgui ${CMAKE_BINARY_DIR}/imgui)
file (GLOB_RECURSE IMGUI_SOURCE ${IMGUI_PATH}/*.cpp)
file (GLOB_RECURSE IMGUI_HEADER ${IMGUI_PATH}/*.h)
list(APPEND PROJECT_SOURCE ${IMGUI_SOURCE})
list(APPEND PROJECT_SOURCE ${IMGUI_HEADER})

list(APPEND PROJECT_INCLUDE ${IMGUI_PATH})
list(APPEND PROJECT_INCLUDE ${IMGUI_PATH}/backends)
# list(APPEND PROJECT_LIBRARIES IMGUI)

#other
file (GLOB_RECURSE Module_SOURCE ${PROJECT_SOURCE_DIR}/*.cpp)
file (GLOB_RECURSE BORDERLESSENGINE_RUNTIME_SOURCE ${BORDERLESSENGINE_RUNTIME_PATH}/*.cpp)
message(${Module_SOURCE})

add_library(${PROJECT_NAME} STATIC ${BORDERLESSENGINE_RUNTIME_SOURCE} ${PROJECT_SOURCE} ${Module_SOURCE})
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_INCLUDE})
target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_LIBRARIES})
